add composer doctrine. update dashboard. add endpoint event detail
