# app/Models/Events.php
@@ -11,8 +11,11 @@ class Events extends Model
         'eventname',
         'eventdate',
         'description',
+        'banner',
+        'thumbnail',
         'photo',
         'agenda',
+        'additionalcontent',
         'activestatus',
         'created_by',
         'modified_by',
